# solomon-speed-boat

./: .gitignore  docker-compose.yml  render.yaml
.github/: ci.yml
.github/workflows/: rust.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  example.env  railway.toml
backend/src/: app.rs  db.rs  lib.rs  main.rs
backend/src/handlers/: booking.rs  health.rs  mod.rs
backend/src/models/: booking.rs
backend/src/repositories/: booking_repositories.rs  mod.rs
backend/tests/: booking_handler_test.rs  booking_model_test.rs  booking_repository_test.rs  health_handler_test.rs
backend/tests/common/: mod.rs
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: BookingForm.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HomePage.tsx  PricingSection.tsx  ScheduleSection.tsx  TimeTableSection.tsx
frontend/components/ui/: button.tsx  card.tsx  dialog.tsx  radio-group.tsx
frontend/config/: assets.ts
frontend/config/theme/: index.ts  primary.ts  semantic.ts
frontend/services/: api-client.ts  booking.service.ts  health.service.ts  index.ts
frontend/services/types/: booking.ts
frontend/styles/: theme.css
